--- a/src/styles/survey.scss
+++ b/src/styles/survey.scss
@@ -15,6 +15,20 @@
   -border-radius must be set on the panel
 */
 
+
+.sd-body,
+.sd-page,
+.sd-page__content,
+.sd-row,
+.sd-question,
+.sd-panel,
+.sd-element__content {
+  touch-action: pan-y;
+}
+
+
+
+
 // !VA Background color
 .sd-container-modern {
   background: $home_bg_color;
@@ -795,7 +809,6 @@ padding:calc(2 * (var(--sjs-base-unit, var(--base-unit, 8px)))) calc(3 * (var(--
 // !VA Force two-column radiogroups to two columns
 .sd-selectbase.survey-two-col {
   .sd-item.sd-radio {
-    
     flex: 0 0 calc(45% - 0.5rem); /* 0.5rem is half of the column gap (1rem) */
     box-sizing: border-box;
     @include tablet {
@@ -1289,9 +1302,9 @@ padding:calc(2 * (var(--sjs-base-unit, var(--base-unit, 8px)))) calc(3 * (var(--
 /* TOP: pinned visually to top of the card (page-scoped) */
 .sj-surveynav--top {
   position: absolute;
-  left: -10px;
-  right: -10px;
-  top: 0;
+  left: -8px;
+  right: -8px;
+  top: 4px;
 }
 
 /* BOTTOM: fixed to viewport, but width/left are synced to the page via JS */
@@ -1327,9 +1340,8 @@ padding:calc(2 * (var(--sjs-base-unit, var(--base-unit, 8px)))) calc(3 * (var(--
   margin: 0;
   cursor: pointer;
   opacity: .7;
-  width: 48px;
-  height: 48px;
-
+  width: 56px;
+  height: 56px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1341,10 +1353,10 @@ padding:calc(2 * (var(--sjs-base-unit, var(--base-unit, 8px)))) calc(3 * (var(--
 }
 
 .sj-surveynav__btn svg {
-  width: 28px;
-  height: 28px;
+  width: 36px;
+  height: 36px;
   stroke: currentColor;
-  color: $secondary_color;
+  color: var(--c-link-accent);;
 }
 
 /* screen-reader-only */
